AKS-With-Azure-Services/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  ingress

---
apiVersion: v1
kind: Namespace
metadata:
  name:  netbox

---

apiVersion: v1
kind: Namespace
metadata:
  name:  redis
