AKS-With-Azure-Services/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-redis
  namespace: redis
spec:
  selector:
    matchLabels:
      app: netbox-redis
  template:
    metadata:
      labels:
        app: netbox-redis
    spec:
      containers:
      - name: redis
        image: redis:5.0.4
        command:
          - redis-server
          - "/redis-master/redis.conf"
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /redis-master-data
          name: data
        - mountPath: /redis-master
          name: config
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: redis-configmap
            items:
            - key: redis-config
              path: redis.conf

---

apiVersion: v1
kind: Service
metadata:
  name: netbox-redis
  namespace: redis
spec:
  selector:
    app: netbox-redis
  ports:
  - port: 6379
    targetPort: 6379
