AKS-With-Azure-Services/redis-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-networkpolicy-denyall
  namespace: redis
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-networkpolicy-inbound
  namespace: redis
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector: 
        matchLabels:
          app: netbox-app


---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-networkpolicy-outbound
  namespace: redis
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: netbox-app
  - to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            k8s-app: kube-dns
